<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_custom_correlation"
        android:title="@string/menu_custom_correlation" />
    <item
        android:id="@+id/nav_transform"
        android:icon="@drawable/ic_camera_black_24dp"
        android:title="@string/menu_transform" />
    <item
        android:id="@+id/nav_actions"
        android:title="@string/menu_actions" />
    <item
        android:id="@+id/nav_errors"
        android:title="@string/menu_errors" />
    <item
        android:id="@+id/nav_resources"
        android:title="@string/menu_resources" />
    <item
        android:id="@+id/nav_context"
        android:title="@string/menu_context" />
    <item
        android:id="@+id/nav_vitals"
        android:title="@string/menu_vitals" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings" />
</menu>