<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_reflow"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_reflow" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/ic_webview_black_24dp"
            android:title="@string/menu_webview" />
        <item
            android:id="@+id/nav_actions"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_actions" />
        <item
            android:id="@+id/nav_errors"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_errors" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_resources" />
        <item
            android:id="@+id/nav_context"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_context" />
        <item
            android:id="@+id/nav_vitals"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_vitals" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>