<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reflow">

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.fc_sdk_test.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.fc_sdk_test.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fc_sdk_test.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_webview"
        android:name="com.example.fc_sdk_test.ui.webview.WebViewFragment"
        android:label="@string/menu_webview"
        tools:layout="@layout/fragment_webview" />

    <fragment
        android:id="@+id/nav_actions"
        android:name="com.example.fc_sdk_test.ui.actions.ActionsFragment"
        android:label="@string/menu_actions"
        tools:layout="@layout/fragment_rum_demo" />

    <fragment
        android:id="@+id/nav_errors"
        android:name="com.example.fc_sdk_test.ui.errors.ErrorsFragment"
        android:label="@string/menu_errors"
        tools:layout="@layout/fragment_rum_demo" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="com.example.fc_sdk_test.ui.resources.ResourcesFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_rum_demo" />

    <fragment
        android:id="@+id/nav_context"
        android:name="com.example.fc_sdk_test.ui.context.ContextFragment"
        android:label="@string/menu_context"
        tools:layout="@layout/fragment_rum_demo" />

    <fragment
        android:id="@+id/nav_vitals"
        android:name="com.example.fc_sdk_test.ui.vitals.VitalsFragment"
        android:label="@string/menu_vitals"
        tools:layout="@layout/fragment_rum_demo" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.fc_sdk_test.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_custom_correlation"
        android:name="com.example.fc_sdk_test.ui.correlation.CustomCorrelationFragment"
        android:label="@string/menu_custom_correlation"
        tools:layout="@layout/fragment_rum_demo" />
</navigation>